name:                blumon
version:             0.1.0.0
synopsis:            Apply gamma correction to your display server
-- description:
license:             BSD3
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
homepage:            https://github.com/jumper149/blumon
bug-reports:         https://github.com/jumper149/blumon/issues
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Blumon
                       Blumon.Monad.Gamma
                       Blumon.Monad.Gamma.Const
                       Blumon.Monad.Recolor
                       Blumon.Monad.Recolor.X
                       Blumon.Monad.Recolor.X.Internal
                       Blumon.RGB
  build-depends:       base              >= 4.11    && < 5
                     , time              >= 1.10    && < 1.11
                     , transformers      >= 0.5.2.0 && < 0.6
                     , transformers-base >= 0.4.5.2 && < 0.5
                     , X11               >= 1.9     && < 1.10
  hs-source-dirs:      src
  includes:            XrandrGamma.h
  install-includes:    XrandrGamma.h
  include-dirs:        include
  c-sources:           include/XrandrGamma.c
  default-language:    Haskell2010
  extensions:          DeriveGeneric
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       TypeApplications
  ghc-options:         -Wall

executable blumon
  main-is:             Main.hs
  build-depends:       base
                     , blumon
  ghc-options:         -Wall
