name:                blumon
version:             0.1.0.0
synopsis:            Apply gamma correction to your display server
-- description:
license:             BSD3
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
homepage:            https://github.com/jumper149/blumon
bug-reports:         https://github.com/jumper149/blumon/issues
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >= 1.10

library
  exposed-modules:     Blumon
                       Blumon.Config
                       Blumon.Control
                       Blumon.Monad.Gamma
                       Blumon.Monad.Gamma.Const
                       Blumon.Monad.Gamma.Linear
                       Blumon.Monad.Recolor
                       Blumon.Monad.Recolor.Print
                       Blumon.Monad.Recolor.X
                       Blumon.RGB
  other-modules:       Blumon.Monad.Recolor.X.Internal
  build-depends:       base              >= 4.11    && < 5
                     , containers        >= 0.6.2.1 && < 0.7
                     , data-default      >= 0.7.1   && < 0.7.2
                     , finite-typelits   >= 0.1.4.0 && < 0.1.5
                     , lifted-base       >= 0.2.3.2 && < 0.2.4
                     , monad-control     >= 1.0.2.0 && < 1.1
                     , mtl               >= 2.2.2   && < 2.3
                     , text              >= 1.2.0.0 && < 1.3
                     , time              >= 1.9.3   && < 1.10
                     , transformers-base >= 0.4.5.2 && < 0.5
                     , X11               >= 1.9     && < 1.10
  hs-source-dirs:      src
  includes:            XrandrGamma.h
  install-includes:    XrandrGamma.h
  extra-libraries:     X11, Xrandr
  include-dirs:        include
  c-sources:           include/XrandrGamma.c
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       TypeApplications
                       TypeFamilies
  ghc-options:         -Wall

executable blumon
  main-is:             Main.hs
  build-depends:       blumon
                     , base
  default-language:    Haskell2010
  ghc-options:         -Wall
