name:                blumon
version:             0.1.0.0
synopsis:            Apply gamma correction to your display server
-- description:
license:             BSD3
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
homepage:            https://github.com/jumper149/blumon
bug-reports:         https://github.com/jumper149/blumon/issues
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >= 1.10

library
  exposed-modules:     Blumon
                       Blumon.Config
                       Blumon.Main
                       Blumon.Main.Control
                       Blumon.Monad.Control
                       Blumon.Monad.Control.Wait
                       Blumon.Monad.Gamma
                       Blumon.Monad.Gamma.Const
                       Blumon.Monad.Gamma.Linear
                       Blumon.Monad.Recolor
                       Blumon.Monad.Recolor.Print
                       Blumon.Monad.Recolor.X
                       Blumon.RGB
  other-modules:       Blumon.Monad.Recolor.X.Internal
  build-depends:       base              >= 4.11    && < 5
                     , containers        >= 0.6.2.1 && < 0.7
                     , data-default      >= 0.7.1   && < 0.7.2
                     , deepseq           >= 1.4.4.0 && < 1.5
                     , exceptions        >= 0.10.0  && < 0.11
                     , finite-typelits   >= 0.1.4.0 && < 0.1.5
                     , lifted-base       >= 0.2.3.2 && < 0.2.4
                     , monad-control     >= 1.0.2.0 && < 1.1
                     , mtl               >= 2.2.2   && < 2.3
                     , streamly          >= 0.7.0   && < 0.8
                     , text              >= 1.2.0.0 && < 1.3
                     , time              >= 1.9.3   && < 1.10
                     , transformers      >= 0.5.6.2 && < 0.5.7
                     , transformers-base >= 0.4.5.2 && < 0.5
                     , X11               >= 1.9     && < 1.10
  hs-source-dirs:      src
  includes:            XrandrGamma.h
  install-includes:    XrandrGamma.h
  extra-libraries:     X11, Xrandr
  include-dirs:        include
  c-sources:           include/XrandrGamma.c
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
  ghc-options:         -Wall

executable blumon
  main-is:             Main.hs
  build-depends:       base
                     , blumon
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  main-is:             Blumon.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Blumon.Test.Monad.Gamma.Linear
                       Blumon.Test.RGB
  build-depends:       base
                     , blumon
                     , data-default
                     , deepseq
                     , hspec        >= 2.6.0   && < 2.8
                     , mtl
                     , QuickCheck   >= 2.14    && < 2.15
                     , time
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
  ghc-options:         -Wall
